[gd_scene load_steps=6 format=3 uid="uid://gcbys6y64aq0"]

[ext_resource type="Script" uid="uid://cae1p7knywgop" path="res://Other/sample.gd" id="1_hjc6n"]
[ext_resource type="Texture2D" uid="uid://5e88kkk2x14y" path="res://icon.svg" id="1_vmvki"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjc6n"]
radius = 14.0
height = 60.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjc6n"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2irhh"]
bg_color = Color(1, 1, 1, 1)

[node name="Sample" type="Area2D"]
linear_damp = 10.0
script = ExtResource("1_hjc6n")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.46875, 0.234375)
texture = ExtResource("1_vmvki")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_hjc6n")

[node name="Specimen Progress" type="ProgressBar" parent="."]
visible = false
offset_left = -35.0
offset_top = -27.0
offset_right = 35.0
offset_bottom = -18.0
theme_override_styles/background = SubResource("StyleBoxFlat_hjc6n")
theme_override_styles/fill = SubResource("StyleBoxFlat_2irhh")
step = 1.0
show_percentage = false

[node name="turn_into_specimen" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="turn_into_specimen" to="." method="_on_turn_into_specimen"]
